--- a/popup.html
+++ b/popup.html
@@ -120,7 +120,7 @@
   </head>
   <body>
     <h2>Figma Chrome Proxy</h2>
-    <p>开启局域网网络访问，实现内网内通过插件配置访问 Figma 网络请求。<a href="https://github.com/" target="_blank">Github 地址</a></p>
+    <p>开启局域网网络访问，实现内网内通过插件配置访问 Figma 网络请求。<a href="https://github.com/leefanv/Figma-Chrome-Proxy" target="_blank">Github 地址</a></p>
     <button id="toggleProxy">Disabled Now</button>
     <button class="accordion">Custom config</button>
     <div class="panel">
